re-config. of AJAX-call chronology, to avoid flickering padding on #content_left

--- a/wp-content/themes/blankslate/css/main.css
+++ b/wp-content/themes/blankslate/css/main.css
@@ -75,7 +75,7 @@ body.home {
   min-width: 600px;
 }
 #content_left.noActor {
-  padding-top: calc(8.75rem);
+  padding-top: calc(10.75rem);
   padding-left: 2rem;
   padding-right: 2rem;
 }
